# Externals-WirelessLink-Application-LudwigAnimal

./: .gitignore  README.md
wirelesslink/: CMakeLists.txt  Kconfig  LCD_concepts.xlsx  pm_static.yml  prj.conf  sysbuild.conf
wirelesslink/boards/cosmiic/cosmiic_wireless_link/: CMakeLists.txt  Kconfig  Kconfig.cosmiic_wireless_link  Kconfig.defconfig  board.cmake  board.yml  cosmiic_wireless_link_nrf5340_cpuapp.dts  cosmiic_wireless_link_nrf5340_cpuapp.yaml  cosmiic_wireless_link_nrf5340_cpuapp_defconfig  cosmiic_wireless_link_nrf5340_cpuapp_ns.yaml  cosmiic_wireless_link_nrf5340_cpunet.dts  cosmiic_wireless_link_nrf5340_cpunet.yaml  nrf5340_cpuapp_common.dtsi  nrf5340_cpuapp_common_pinctrl.dtsi
wirelesslink/src/: audio.c  audio.h  cc1101radio.c  cc1101radio.h  charger.c  charger.h  cmdhandler.c  cmdhandler.h  customcharacter.h  imu.c  imu.h  main.c  spi.c  spi.h  wlgpio.c  wlgpio.h
wirelesslink/sysbuild/: mcuboot.conf  mcuboot.overlay
